--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/optimization/OptimizerPreferences.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/optimization/OptimizerPreferences.form
@@ -900,14 +900,14 @@
                 <Component class="javax.swing.JSpinner" name="jSpinnerInternalParameterEnd">
                   <Properties>
                     <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-                      <SpinnerModel initial="0" maximum="3" minimum="0" numberType="java.lang.Integer" stepSize="1" type="number"/>
+                      <SpinnerModel initial="0.0" numberType="java.lang.Float" stepSize="1.0" type="number"/>
                     </Property>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JSpinner" name="jSpinnerInternalParameterStart">
                   <Properties>
                     <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-                      <SpinnerModel initial="0" maximum="3" minimum="0" numberType="java.lang.Integer" stepSize="1" type="number"/>
+                      <SpinnerModel initial="0.0" numberType="java.lang.Float" stepSize="1.0" type="number"/>
                     </Property>
                   </Properties>
                 </Component>
