changing the simultiondeletionhandling

--- a/timenetws-server/src/node/tns/views/index.jade
+++ b/timenetws-server/src/node/tns/views/index.jade
@@ -7,3 +7,8 @@ block content
   #clientcount
   clientcount 
   p #{clientcount} clients waiting for tasks.
+  
+  div
+    form(name="reset", action="/timenetws-server/reset", method="post")
+      input(type="password", name="password")
+      input(type="submit", value="Reset complete server!")
