--- a/timenetws-server/src/node/tns/views/index.jade
+++ b/timenetws-server/src/node/tns/views/index.jade
@@ -9,6 +9,6 @@ block content
   p #{clientcount} clients waiting for tasks.
   
   div
-    form(name="reset", action="/timenetws-server/reset", method="post")
+    form(name="reset", action="/reset", method="post")
       input(type="password", name="password")
       input(type="submit", value="Reset complete server!")
