--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/LogFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/LogFrame.form
@@ -24,7 +24,6 @@
   </NonVisualComponents>
   <Properties>
     <Property name="title" type="java.lang.String" value="Log Viewer"/>
-    <Property name="autoRequestFocus" type="boolean" value="false"/>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
       <Color id="Standardcursor"/>
     </Property>
@@ -34,11 +33,9 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[650, 300]"/>
     </Property>
+    <Property name="name" type="java.lang.String" value="LogFrame" noResource="true"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[650, 300]"/>
-    </Property>
-    <Property name="type" type="java.awt.Window$Type" editor="org.netbeans.modules.form.editors.EnumEditor">
-      <Value id="UTILITY"/>
     </Property>
   </Properties>
   <AccessibilityProperties>
