--- a/timenetws-server/src/node/tns/views/index.jade
+++ b/timenetws-server/src/node/tns/views/index.jade
@@ -8,7 +8,7 @@ block content
     p #{clientcount} clients waiting for tasks.
 
   #clientsrunning
-    p #{clientsrunning} simulations distributed for and not yet ended.
+    p #{clientsrunning} simulations distributed for simulation and not yet ended.
   
   div
     form(name="reset", action="/reset", method="post")
